[package]
name = "vulkan_samples_2019_rust_vulkano"
version = "0.1.0"
authors = ["Yasuhiro Taniuchi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vk-sample-common = { path = "../vk-sample-common" }
vulkano = "0.19.0"
vk-sys = "0.5.2"

[dependencies.glfw]
version = "0.39.1"
default-features = false
features = ["vulkan"]
